--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 server-laravel/TODO.md
+.env
+
+# General
+.DS_Store
+.Trashes
+
+# node_modules
+/node_modules
+
+# vs code
+.vscode
+.npm
+
+# project
+/css/styles.css.map
+.prepros
